Twenty Thirteen: fix layout issue with search form in older versions of Safari and Android. Fixes #24192, props iljoja. Built from https://develop.svn.wordpress.org/trunk@28662
git-svn-id: http://core.svn.wordpress.org/trunk@28480 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -971,7 +971,7 @@ ul.nav-menu .focus > ul,
 	position: relative;
 	-webkit-transition: width 400ms ease, background 400ms ease;
 	transition:         width 400ms ease, background 400ms ease;
-	width: 0;
+	width: 1px;
 }
 
 .site-header .search-field:focus {
